--- a/client/package.json
+++ b/client/package.json
@@ -11,20 +11,21 @@
     "start": "vite start"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "@heroicons/react": "^2.0.18",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
-    "react-router-dom": "^6.18.0",
-    "recharts": "^2.8.0",
-    "framer-motion": "^10.16.4",
-    "react-hot-toast": "^2.4.1",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
-    "@heroicons/react": "^2.0.18",
-    "tailwindcss": "^3.3.5",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "framer-motion": "^10.16.4",
+    "postcss": "^8.4.31",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.18.0",
+    "react-scripts": "5.0.1",
+    "react-select": "^5.10.2",
+    "recharts": "^2.8.0",
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
