--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon server.js",
     "client": "cd client && npm start",
-    "build": "cd client && npm run build",
+    "build": "cd client && npm i && npm run build",
     "start": "node server.js",
     "setup": "npm install && cd client && npm install",
     "db:init": "node scripts/initDatabase.js",
