--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ RATE_LIMIT_WINDOW=900000
 RATE_LIMIT_MAX=100
 
 # CORS
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:5173
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:5173,//https://football-odds-analyzer-pro.onrender.com
 
 # Caching
 CACHE_DURATION=300000
