--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
     "recharts": "^2.8.0",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "vite": "^7.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -35,8 +36,7 @@
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "vite": "^7.1.2"
+    "globals": "^16.3.0"
   },
   "eslintConfig": {
     "extends": [
