--- a/client/package.json
+++ b/client/package.json
@@ -26,13 +26,13 @@
     "react-select": "^5.10.2",
     "recharts": "^2.8.0",
     "tailwindcss": "^3.3.5",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "@vitejs/plugin-react": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
