--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "node-cron": "^3.0.3",
     "moment": "^2.29.4",
     "lodash": "^4.17.21",
-    "mathjs": "^12.0.0"
+    "mathjs": "^12.0.0",
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "concurrently": "^8.2.2",
     "jest": "^29.7.0",
     "eslint": "^8.52.0",
